--- a/biology/annealing-temperature-calculator.html
+++ b/biology/annealing-temperature-calculator.html
@@ -389,59 +389,8 @@ Clear all changes
       </div>
     </div>
   <div class="description-txt">
-  <h2>What is Annealing Temperature</h2>
-  
-<p>
-  Annealing temperature is a key parameter of polymerase chain reaction (PCR), a process of molecular biology that amplifies specific sequences of DNA. Within PCR, the DNA copies are separated (denatured) at high temperature, complementary sequences are bound during an annealing step by primers addition and during the final step (extension) a polymerase enzyme is produced to create new DNA. The annealing temperature (also known as the annealing temperature or abbreviated Ta) is the temperature of binding or annealing of primers to the single-stranded DNA template. The Ta depends mainly on the specificity and efficiency of the PCR hence its choice is very vital. At low annealing temperature, the primers will bind non-specifically and may be amplified non-specifically or form primer-dimers. Conversely, high temperature will cause primers to fail to bind, which will result in amplification or complete breakdown of PCR.
-</p>
-  <p>
-    The melting temperature (Tm) of the primers is directly connected with the annealing temperature and is the temperature at which half the DNA duplex dissociates to single strands. Although Tm is dependent on the primer-template duplex, annealing temperature is normally maintained at a few degrees lower than the primer Tm to have stable but specific hybridization. The determinants of annealing temperature are the length of the primer, GC-content, the composition of the nucleotide and the ionic strength of the buffer. Longer primers or those with more GC content also tend to have higher annealing temperature since the GC base pairs have 3 hydrogen bonds rather than 2, making them more stable in the duplex. DNA duplexes are also stabilized by salt concentration in the reaction buffer; at higher salt concentration annealing temperatures can be permitted. Optimization of annealing temperature based on these variables plays a vital role in amplifying a DNA fragment by PCR.  
-  </p>  <p>
-    Annealing temperature is not a constant number, it is usually something that needs to be optimized. To identify the temperature at which Ta is the most specific and amplifies best, researchers could use gradient PCR, and test a series of temperatures to identify the optimal Ta temperature. Computational aids, such as Annealing Temperature calculators, are now available to enable scientists to estimate the best temperature in relation to the characteristics of the primers and targets. These calculators simplify the preparation of experimental work, minimize trial and error and improve reproducibility of molecular biology experiments. The knowledge of annealing temperature principles enables scientists to develop useful PCR experiments, minimize errors and produce reliable amplification making it the core concept in the work with DNA.  
-  </p>  <h2>How does the Annealing Temperature calculator work</h2>
-  <p>
-    The annealing temperature calculator determines the optimal temperature for Primer annealing for polymerase chain reaction. The goal is to achieve a balance between specificity and efficiency to prevent the insertion of non-specific primers while ensuring proper hybridization. The calculator incorporates scientific equations developed from Rychlik and other works. The Rychlik method is the most known of these and is written as <strong>Ta = 0.3 × Tm_primer + 0.7 × Tm_target − 14.9</strong>. Tm_primer is melting temperature of the primer, and Tm_target is the melting temperature of the entire amplified PCR. The result is given in degrees Celsius since it is the most accepted unit for thermal molecular biology protocols.
-
-  
-  </p>  <p>
-    Within the system itself, the calculator computes resultant values in any input unit, including but not limited to, Fahrenheit or Kelvin, by changing them to Celsius in advance of the computation cycle. It also takes into account inordinate or exact figures and hence takes into account the entire 15,000 and not some clipped or misread version. The tool’s completion step, where the calculator has finished computing the values, is able to showcase the results in the user’s desired unit. This is the resultant value of the value of the value of the value of the value of the value of the value user defined as the annealing temperature.   The annealing temperature obtained is sufficient to say that the user is able to seamlessly incorporate the system into their lab protocols. The tool is designed to respond dynamically; changing any input, including the primer Tm or any target Tm, and even the unit system, results in the automatic change of the calculated annealing temperature.
-
- 
-  </p>  <p>
-    The calculator relies on a thermodynamic approach to optimization and empirical optimization. Primer melting temperatures may be calculated based on nearest-neighbor thermodynamic models which consider base stacking, sequence context and mismatches. These Tm values are then put in the Rychlik formula to give the best Ta. Although the calculator gives an accurate estimate, it is at all times advisable that the researchers confirm the estimated temperature using the experimental optimization process like gradient PCR, since the reaction behavior may change with the complexity of the template, concentration of the primer and the choice of polymerase. Its credibility and speed makes it an essential component in the field of molecular biology to save time and minimize experimental error with the aim of steering scientists on the right path to successful PCR conditions.  
-  </p>  <p>
-    Contemporary implementations can also incorporate strong input checks, unit translation and error checking. This will guarantee that the invalid or missing data will not generate misleading data. Also, these calculators usually explain the formula and its assumptions and teach the user as they are used to do calculations. The Annealing Temperature calculator fills the gap between computation predictions and experimental requirements by integrating thermodynamic theory, empirical evidence and practical laboratory considerations into one convenient calculator that scientists can rely on to plan PCR reactions.  
-  </p>  <h2>Difference between Annealing Temperature and Melting Temperature</h2>
-  <p>
-    Although the concept of annealing temperature and melting temperature (Tm) are closely related terms in molecular biology, they, however, are different and are used in the context of DNA amplification experiments. The point at which a half of a duplex DNA dissociates to single strands is denoted as melting temperature. It is a physical property of the DNA sequence that is determined by the composition of the nucleotides, their length and interactions that depend on sequence. Tm is used to denote the stability of the DNA duplex: A higher Tm value is associated with a more stable duplex which is usually as a result of longer sequence or greater GC content.  
-  </p>  <p>
-    Conversely, annealing temperature refers to the literal temperature at which the PCR cycle is run that the primers hybridize to the template of a single-stranded DNA. T a is typically several degrees below Tm to make sure that the primers stick well together without leading to non-specific reactions. Tm is a property of the primer-template pair calculated, whereas Ta is a condition experimentally or computationally determined, which should maximise PCR specificity and yield. The selection of a suitable Ta involves a trade off between the stability of the theory as reflected by Tm and such practical factors as the design of primers, the composition of the buffer, and the precision of a thermal cycler.  
-  </p>  <p>
-    The difference is essential in the success of an experiment. When a Ta is too near Tm it may decrease the binding strength of the primer resulting in weak or no amplification. A Ta that is substantially less than Tm, on the other hand, is more likely to cause non-specific binding, producing undesirable byproducts. Knowledge of the two concepts enables researchers to predict the behavior of the DNA under thermal cycling, design primers of the right characteristics and efficiently optimize the reaction parameters.  
-  </p>  <p>
-    In actual action, Tm is the theoretical parameter to guide the stability of primers and Ta is the practical parameter to design PCR protocol. The Annealing Temperature calculator is a computer program that converts Tm calculations to a more useful Ta decision, devising a bridge between the theory of thermodynamics and practice. This guarantees dependable, repeatable amplification because it directs the researchers to the temperature that causes the greatest specificity of the primers, and still allows the amplification of DNA to proceed effectively.  
-  </p>  <h2>FAQs</h2>
-  <p>
-    <strong>Can the predicted annealing temperature guarantee PCR success?</strong><br>
-    While computational methods including outputs from Annealing Temperature calculators do not guarantee PCR success across the board, these methods do apply scientifically validated formulas and thermodynamic models to develop the best estimate for Ta. However, the results from any reaction are also to some extent determined by the complexity of the template, the amount of primers, the type of polymerase, the buffer and other additives such as DMSO or betaine. To increase the chances of successful amplification, researchers often do gradient PCR experiments to estimate the ideal annealing temperature for their reactions. This value is usually in the calculator's predicted value and is further refined to maximize specificity and yield.
-
-  
-  </p>  <p>
-    <strong>How does primer design affect annealing temperature?</strong><br>
-    The melting temperature of the primer-template duplex and its dissociation of the duplex are influenced by primer length. the obtained values of the duplex stability is maximal. The length of the primer and its GC content will require higher annealing temperature. This is due to the formation of GC base pairs which stabilize the duplex by the formation of three hydrogen bonds. The presence of secondary structures or hairpins reduces the effective binding and this requires a decrease in Ta. Reduced effective binding of higher GC rich duplexes require primer designs which compute the annealing temperature based on reliable Tm values. effective and specific binding of the primer is assured. And this is what decided the Tm of the primer.
-
-
-  </p>  <p>
-    <strong>Does buffer composition affect annealing temperature?</strong><br>
-    Yes. The concentration of ions and the presence of additives in the buffer used for polymerase chain reaction (PCR) have a significant impact on the stability of DNA duplexes. Increasing salt concentration increases the stability of the hydrogen bonds and the melting temperature of the DNA duplex. On the other hand, additives such as DMSO (dimethyl sulfoxide) decrease the Tm (melting temperature) by eliminating secondary structure. Calculated annealing temperatures of the target DNA sequences do not take into account some practical laboratory buffer conditions, thereby users must account for these discrepancies in their experimental designs. Increasing the concentration of certain buffer components in reaction mixtures (ex. Ta) or running gradient PCR can be effective if the users’ conditions deviate from these standard assumptions, in order to allow maximal amplification.
-
- 
-  </p>  <p>
-    <strong>Can I use the same annealing temperature for all primers in multiplex PCR?</strong><br>
-    During multiplex PCR, many sequences are amplified at the same time, which usually requires primers with different T m values. In these situations, one annealing temperature might not be best for each primer pair. A calculator can estimate a compromise Ta, but some optimization is almost always needed. Non-specific amplification products can be avoided by ensuring all T m values are close enough using gradient PCR or re-designed primers. The primer set for the multiplexed reaction must be tuned to a constant annealing temperature and constant conditions to obtain reproducible results.
-
-
-  </p>
+    
+  </div>
   </section>
   
 
