--- a/biology.html
+++ b/biology.html
@@ -5,35 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>   
 
-<title>Biology Calculators</title>    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script>          
+<title>Biology Calculators</title>
+
+<script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');
+  </script>         
+  
 <link rel="stylesheet" href="/assets/css/categorised-calculators-list.css" />
-
-
 
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 
-<meta name="title" content="Free Biology Calculators for Farmers, Gardeners & Scientists">
-<meta name="description" content="Access a powerful set of free biology calculators. Calculate seed rate, fertilizer mix, crop yield, pesticide usage, and more — built for farmers, gardeners, and researchers.">
-
-
+<meta name="description" content="Biology doesn't have to feel overwhelming. Our biology calculators are here to make tough problems easier, giving students and learners clear answers they can trust.">
 
 <link rel="canonical" href="https://calclulo.com/biology">
-
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology">
 <meta property="og:title" content="Free Biology Calculators for Farmers, Gardeners & Scientists">
-<meta property="og:description" content="Calculate seed rate, crop yield, fertilizers, pesticides, and more with this free collection of farming calculators. Trusted by biology professionals.">
-<meta property="og:image" content="https://calclulo.com/assets/biology-thumbnail.jpg">
+<meta property="og:description" content="Biology doesn't have to feel overwhelming. Our biology calculators are here to make tough problems easier, giving students and learners clear answers they can trust.">
+<meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://calclulo.com/biology ">
-<meta name="twitter:title" content="Free Biology Calculators for Farmers, Gardeners & Scientists">
-<meta name="twitter:description" content="Quick, reliable tools for seed rate, pesticide use, crop yield, and more. Empowering farmers and researchers with accurate calculations.">
-<meta name="twitter:image" content="https://calclulo.com/assets/biology-thumbnail.jpg">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
 <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128">
@@ -43,14 +36,17 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Free Biology Calculators",
-    "url": "https://calclulo.com/biology",
-    "description": "This page features free biology calculators designed for farmers, gardeners, pet owners, and researchers. Calculate seed rate, fertilizer mix, pesticide usage, and more with precision.",
-    "inLanguage": "en",
+    "name": "Biology Calculators",
+    "url": "https://calclulo.com/biology/biology-calculators",
+    "description": "Biology doesn't have to feel overwhelming. Our biology calculators are here to make tough problems easier, giving students and learners clear answers they can trust.",
     "publisher": {
       "@type": "Organization",
-      "name": "Your Brand Name",
-      "url": "https://calclulo.com"
+      "name": "Calclulo",
+      "url": "https://calclulo.com",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://calclulo.com/assets/images/Calclulo Logo.svg"
+      }
     }
   }
 </script>
@@ -68,8 +64,6 @@
     <button class="quick-header-btn-design-one" id="hamburger-menu"><svg width="28px" height="28px" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z"></path> </g></svg></button>
     </div>
 </header>
-
-
 
  <nav class="side-nav">
   
@@ -222,7 +216,7 @@ Everyday Life
 <a href="/biology/horse-gestation-calculator">Horse Gestation Calculator</a>
 <a href="/biology/guinea-pig-pregnancy-calculator">Guinea Pig Pregnancy Calculator</a>
 <a href="/biology/llama-pregnancy-calculator">Llama Pregnancy Calculator</a>
-<!--<a href="/biology/rabbit-gestation-calculator">Rabbit Gestation Calculator</a>-->
+
 <a href="/biology/sheep-gestation-calculator">Sheep Gestation Calculator</a>
 <a href="/biology/swine-gestation-calculator">Swine Gestation Calculator</a>
 </div>
