--- a/biology.html
+++ b/biology.html
@@ -25,7 +25,7 @@
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology">
-<meta property="og:title" content="Free Biology Calculators for Farmers, Gardeners & Scientists">
+<meta property="og:title" content="Free Biology Calculators">
 <meta property="og:description" content="Biology doesn't have to feel overwhelming. Our biology calculators are here to make tough problems easier, giving students and learners clear answers they can trust.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
