--- a/biology.html
+++ b/biology.html
@@ -208,19 +208,23 @@ Everyday Life
 
 <div class="calculators-lists">
   <h2>Biology Laboratory Calculators 🔬</h2>
-    <a href="/biology/ligation-calculator">Ligation Calculator</a>
-    <a href="/biology/annealing-temperature-calculator">Annealing Temperature Calculator</a>
+   <ul>
+     <li><a href="/biology/ligation-calculator">Ligation Calculator</a></li>
+     <li><a href="/biology/annealing-temperature-calculator">Annealing Temperature Calculator</a></li>
+   </ul>
+    
     <h2>Animal pregnancy calculators 🐄🐐</h2>
-<a href="/biology/cat-pregnancy-calculator">Cat Pregnancy Calculator</a>
-<a href="/biology/cow-gestation-calculator">Cow Gestation Calculator</a>
-<a href="/biology/dog-pregnancy-calculator">Dog Pregnancy Calculator</a>
-<a href="/biology/goat-gestation-calculator">Goat Gestation Calculator</a>
-<a href="/biology/horse-gestation-calculator">Horse Gestation Calculator</a>
-<a href="/biology/guinea-pig-pregnancy-calculator">Guinea Pig Pregnancy Calculator</a>
-<a href="/biology/llama-pregnancy-calculator">Llama Pregnancy Calculator</a>
-
-<a href="/biology/sheep-gestation-calculator">Sheep Gestation Calculator</a>
-<a href="/biology/swine-gestation-calculator">Swine Gestation Calculator</a>
+<ul>
+  <li><a href="/biology/cat-pregnancy-calculator">Cat Pregnancy Calculator</a></li>
+  <li><a href="/biology/cow-gestation-calculator">Cow Gestation Calculator</a></li>
+  <li><a href="/biology/dog-pregnancy-calculator">Dog Pregnancy Calculator</a></li>
+  <li><a href="/biology/goat-gestation-calculator">Goat Gestation Calculator</a></li>
+  <li><a href="/biology/horse-gestation-calculator">Horse Gestation Calculator</a></li>
+  <li><a href="/biology/guinea-pig-pregnancy-calculator">Guinea Pig Pregnancy Calculator</a></li>
+  <li><a href="/biology/llama-pregnancy-calculator">Llama Pregnancy Calculator</a></li>
+  <li><a href="/biology/sheep-gestation-calculator">Sheep Gestation Calculator</a></li>
+  <li><a href="/biology/swine-gestation-calculator">Swine Gestation Calculator</a></li>
+</ul>
 </div>
   </section>
 
