--- a/biology/horse-gestation-calculator.html
+++ b/biology/horse-gestation-calculator.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="description" content="Use our free Horse Gestation Calculator to predict a mare’s expected foaling date. Get fast and accurate estimates based on the breeding date.">
+<meta name="description" content="Use our free Horse Gestation Calculator to predict a mare’s expected foaling date.">
 
 
 
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/horse-gestation-calculator">
 <meta property="og:title" content="Horse Gestation Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate when your horse is likely to give birth.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -40,7 +40,7 @@
     "@type": "WebPage",
     "name": "Horse Gestation Calculator",
     "url": "https://calclulo.com/biology/horse-gestation-calculator",
-    "description": "",
+    "description": "Estimate when your horse is likely to give birth.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -181,8 +181,6 @@ Everyday Life
 <h1 id="hero-h1">
   Horse Gestation Calculator
 </h1>
-
-
 </div>
 
 <div class="container">
@@ -271,7 +269,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Our horse gestation calculator lets you estimate when your horse is likely to give birth.</span></h2>
    <p>
      
    </p>
