--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -12,7 +12,7 @@
 <meta name="apple-mobile-web-app-title" content="Calclulo">
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content=" ">
+<meta name="description" content=" Our ligation calculator allows you to calculate the optimal vector and insert mass required for a cloning reaction.">
 
 <link rel="canonical" href="https://calclulo.com/biology/ligation-calculator">
 
@@ -20,7 +20,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/ligation-calculator">
 <meta property="og:title" content="Ligation Calculator ">
-<meta property="og:description" content="">
+<meta property="og:description" content="Our ligation calculator allows you to calculate the optimal vector and insert mass required for a cloning reaction.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Ligation Calculator",
     "url": "https://calclulo.com/biology/ligation-calculator",
-    "description": "",
+    "description": "Our ligation calculator allows you to calculate the optimal vector and insert mass required for a cloning reaction.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -575,9 +575,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     Our ligation calculator allows you to calculate the optimal vector and insert mass required for a cloning reaction.
    </p>
  </article>
 
