--- a/biology/sheep-gestation-calculator.html
+++ b/biology/sheep-gestation-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Our sheep gestation calculator lets you estimate when your sheep is likely to give birth.">
 
 <link rel="canonical" href="https://calclulo.com/biology/sheep-gestation-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/sheep-gestation-calculator">
 <meta property="og:title" content="Sheep Gestation Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Our sheep gestation calculator lets you estimate when your sheep is likely to give birth.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
@@ -31,7 +31,7 @@
     "@type": "WebPage",
     "name": "Sheep Gestation Calculator",
     "url": "https://calclulo.com/biology/sheep-gestation-calculator",
-    "description": "",
+    "description": "Our sheep gestation calculator lets you estimate when your sheep is likely to give birth.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -261,9 +261,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     Our sheep gestation calculator lets you estimate when your sheep is likely to give birth.
    </p>
  </article>
   </section>
