--- a/biology/cat-pregnancy-calculator.html
+++ b/biology/cat-pregnancy-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate when your cat is likely to give birth.">
 
 <link rel="canonical" href="https://calclulo.com/biology/cat-pregnancy-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/cat-pregnancy-calculator">
 <meta property="og:title" content="Cat Pregnancy Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate when your cat is likely to give birth.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -33,7 +33,7 @@
     "@type": "WebPage",
     "name": "Cat Pregnancy Calculator",
     "url": "https://calclulo.com/biology/cat-pregnancy-calculator",
-    "description": "",
+    "description": "The cat pregnancy calculator lets you estimate when your cat is likely to give birth.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -264,7 +264,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     The cat pregnancy calculator lets you estimate when your cat is likely to give birth.
    </p>
  </article>
   </section>
