--- a/biology/cow-gestation-calculator.html
+++ b/biology/cow-gestation-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate when your cow is likely to give birth with this cow gestation calculator.">
 
 <link rel="canonical" href="https://calclulo.com/biology/cow-gestation-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/cow-gestation-calculator">
 <meta property="og:title" content="Cow Gestation Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Estimate when your cow is likely to give birth with this cow gestation calculator.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -33,7 +33,7 @@
     "@type": "WebPage",
     "name": "Cow Gestation Calculator",
     "url": "https://calclulo.com/biology/cow-gestation-calculator",
-    "description": "",
+    "description": "Estimate when your cow is likely to give birth with this cow gestation calculator.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -337,7 +337,7 @@ Clear all changes
 <article class="description-txt">
    <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
    <p>
-     
+     Our cow gestation calculator lets you estimate when your cow is likely to give birth.
    </p>
  </article>
   </section>
