--- a/biology/goat-gestation-calculator.html
+++ b/biology/goat-gestation-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Estimate when your goat is likely to give birth.">
 
 <link rel="canonical" href="https://calclulo.com/biology/goat-gestation-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/goat-gestation-calculator">
 <meta property="og:title" content="Goat Gestation Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="The goat gestation calculator lets you find out the possible date your goat is likely to give birth.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 
@@ -34,7 +34,7 @@
     "@type": "WebPage",
     "name": "Goat Gestation Calculator",
     "url": "https://calclulo.com/biology/goat-gestation-calculator",
-    "description": "",
+    "description": "The goat gestation calculator allows you find out the possible date your goat is likely to give birth.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -312,9 +312,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     The goat gestation calculator allows you find out the possible date your goat is likely to give birth.
    </p>
  </article>
   </section>
