--- a/biology/guinea-pig-pregnancy-calculator.html
+++ b/biology/guinea-pig-pregnancy-calculator.html
@@ -13,14 +13,14 @@
 
 <link rel="stylesheet" href="/assets/css/calculators-styles-global.css" />
 
-<meta name="description" content="">
+<meta name="description" content="Find out when your guinea pig is likely to give birth.">
 
 <link rel="canonical" href="https://calclulo.com/biology/guinea-pig-pregnancy-calculator">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://calclulo.com/biology/guinea-pig-pregnancy-calculator">
 <meta property="og:title" content="Guinea Pig Pregnancy Calculator">
-<meta property="og:description" content="">
+<meta property="og:description" content="Find out when your guinea pig is likely to give birth.">
 <meta property="og:image" content="https://calclulo.com/assets/images/thumbnail-global.png">
 
 <link href="/favicons/favicon.png" rel="icon" sizes="48x48">
@@ -33,7 +33,7 @@
     "@type": "WebPage",
     "name": "Guinea Pig Pregnancy Calculator",
     "url": "https://calclulo.com/biology/guinea-pig-pregnancy-calculator",
-    "description": "Free Guinea Pig Pregnancy Calculator to estimate farrowing dates. Calculates the average gestation period (59–72 days) and shows earliest and latest delivery window.",
+    "description": "Estimate the farrowing date of your Guinea Pig with our free calculator.",
     "inLanguage": "en",
     "publisher": {
       "@type": "Organization",
@@ -260,9 +260,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     The guinea pig pregnancy calculator lets you estimate when your guinea pig is likely to give birth.
    </p>
  </article>
   </section>
