--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -503,7 +503,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   
   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="volumeOfInsertDNAToAdd" >
-  <span style="padding-right: 10px;" class="unit-display">µL
+  <span class="unit-display">µL
   </span>
 </div>
     
