--- a/biology/cow-gestation-calculator.html
+++ b/biology/cow-gestation-calculator.html
@@ -299,7 +299,7 @@ Everyday Life
 
  </div>
   </div>
-  <div class="resultsdiv">
+  <div class="output-group">
     
   </div>
 </div>
@@ -472,7 +472,7 @@ Everyday Life
   const calvingInput = document.getElementById('Calvingstart');
   const postpartumInput = document.getElementById('EndOfPostpartum');
   const radios = document.querySelectorAll("input[name='FirsTtimeCalver']");
-  const resultsDiv = document.querySelector('.resultsdiv');
+  const resultsDiv = document.querySelector('.output-group');
 
   const MS_PER_DAY = 24 * 60 * 60 * 1000;
   const AVG_GESTATION = 283;
