--- a/biology/goat-gestation-calculator.html
+++ b/biology/goat-gestation-calculator.html
@@ -276,7 +276,7 @@ Everyday Life
 
  </div>
   </div>
-  <div class="resultsdiv">
+  <div class="output-group">
     
   </div>
 </div>
@@ -445,7 +445,7 @@ Everyday Life
   (() => {
   const breedingInput = document.getElementById("BreedingDate");
   const kiddingInput = document.getElementById("Kiddingdate");
-  const resultsDiv = document.querySelector(".resultsdiv");
+  const resultsDiv = document.querySelector(".output-group");
   const breedRadios = document.querySelectorAll("input[name='breedType']");
 
   const MS_PER_DAY = 24 * 60 * 60 * 1000;
