--- a/biology/dog-pregnancy-calculator.html
+++ b/biology/dog-pregnancy-calculator.html
@@ -224,7 +224,7 @@ Everyday Life
 
  </div>
   </div>
-  <div class="resultsdiv">
+  <div class="output-group">
     
   </div>
 </div>
@@ -382,40 +382,6 @@ Everyday Life
     <span>Made with <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z"/></svg> in Earth</span>
   </footer>
 
-  <style>
-  #resultsdiv{
-    color: #515353;
-    margin-top: 1rem;
-  border-radius: 12px;
-  padding: 1rem; background: #FFF3CD8A;
-  display: flex;
-  flex-direction: column;
-  gap: .7em;
-}
-#resultsdiv p{
-  line-height: 1.5;
-  font-size: .8em;
-}
-#resultsdiv strong{
-  font-family: lexend;
-  font-size: 400;
-  font-size: .8em;
-}
-  #resultsdiv ul{
-    color: #515353;
-font-size: .93em;
-line-height: 1.7;
-display: flex;
-flex-direction: column;
-gap: .2.5em;
-margin-top: -1em;
-  }
-  #resultsdiv ul li::marker {
-  color: red;
-  font-size: 1.4em;
-  color: #868798;
-}
-  </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
 
@@ -427,7 +393,7 @@ margin-top: -1em;
 (() => {
   const matingInput = document.getElementById("matingDate");
   const dueInput = document.getElementById("dueDate");
-  const resultsDiv = document.querySelector(".resultsdiv");
+  const resultsDiv = document.querySelector(".output-group");
 
   const MS_PER_DAY = 24 * 60 * 60 * 1000;
   const EARLIEST = 58;
