--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -571,7 +571,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
-<a href="/everyday-life">Fat Intake Calculator</a>
+<a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
