--- a/biology/llama-pregnancy-calculator.html
+++ b/biology/llama-pregnancy-calculator.html
@@ -257,7 +257,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/health/gfr-calculator">GFR Calculator</a>
         <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
