--- a/biology/cow-gestation-calculator.html
+++ b/biology/cow-gestation-calculator.html
@@ -327,7 +327,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar animal pregnancy calculators</h2>
       <div class="similar-calculators">
         <a href="/biology/goat-gestation-calculator">Goat gestation</a>
         <a href="/biology/horse-gestation-calculator">Horse gestation</a>
@@ -335,7 +335,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      Our cow gestation calculator lets you estimate when your cow is likely to give birth.
    </p>
